--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Obra social app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
